<resources>
    <string name="app_name">Donation 3.0</string>
    <string name="action_settings">Settings</string>

    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="menuDonate">Donate</string>
    <string name="amount">Amount</string>
    <string name="total">$0</string>
    <string name="totalSoFar">Total So Far</string>
    <string name="menuReset">Reset</string>
</resources>